fix(api): Correção de procedimento na criacao de usuario